--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-sPyNNaker8 >= 1!4.0.0a2
-sPyNNakerExternalDevicesPlugin == 1!4.0.0a3
+sPyNNaker8 >= 1!4.0.0a5, < 1!5.0.0
+sPyNNakerExternalDevicesPlugin == 1!4.0.0a5, < 1!5.0.0
 pynn>=0.8, <0.9
