revert back to test why it fails

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: python
-python: 2.7
+matrix:
+  include:
+    - python: "2.7"
+    - pytest
 
 virtualenv:
   system_site_packages: true
@@ -35,7 +38,9 @@ before_script:
 
 script:
   - py.test unittests
-  - flake8
+  - flake8 spynnaker8_external_devices_plugin
+  - flake8 unittests
+  # No flake8 of intergartion_tests as very broken
   - cd doc/source
   - sphinx-build -T -E -b html -d _build/doctrees-readthedocsdirhtml -D language=en . _build/html
   - sphinx-build -T -b json -d _build/doctrees-json -D language=en . _build/json
