--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: python
-matrix:
-  include:
-    - python: "2.7"
-    - pytest
+python: 2.7
 
 virtualenv:
   system_site_packages: true
@@ -21,7 +18,7 @@ before_install:
   - pip install --upgrade git+git://github.com/SpiNNakerManchester/DataSpecification.git@$TRAVIS_BRANCH || pip install --upgrade git+git://github.com/SpiNNakerManchester/DataSpecification.git@master
   - pip install --upgrade git+git://github.com/SpiNNakerManchester/SpiNNFrontEndCommon.git@$TRAVIS_BRANCH || pip install --upgrade git+git://github.com/SpiNNakerManchester/SpiNNFrontEndCommon.git@master
   - pip install --upgrade git+git://github.com/SpiNNakerManchester/sPyNNaker.git@$TRAVIS_BRANCH || pip install --upgrade git+git://github.com/SpiNNakerManchester/sPyNNaker.git@master
-  - pip install --upgrade git+git://github.com/SpiNNakerManchester/sPyNNaker8.git@$TRAVIS_BRANCH || pip install --upgrade git+git://github.com/SpiNNakerManchester/sPyNNaker7.git@master
+  - pip install --upgrade git+git://github.com/SpiNNakerManchester/sPyNNaker8.git@$TRAVIS_BRANCH || pip install --upgrade git+git://github.com/SpiNNakerManchester/sPyNNaker8.git@master
   - pip install --upgrade git+git://github.com/SpiNNakerManchester/sPyNNakerExternalDevicesPlugin.git@$TRAVIS_BRANCH || pip install --upgrade git+git://github.com/SpiNNakerManchester/sPyNNakerExternalDevicesPlugin.git@master
 
 install:
@@ -38,9 +35,7 @@ before_script:
 
 script:
   - py.test unittests
-  - flake8 spynnaker8_external_devices_plugin
-  - flake8 unittests
-  # No flake8 of intergartion_tests as very broken
+  - flake8
   - cd doc/source
   - sphinx-build -T -E -b html -d _build/doctrees-readthedocsdirhtml -D language=en . _build/html
   - sphinx-build -T -b json -d _build/doctrees-json -D language=en . _build/json
